feat: support dx-clip-demo docker build environment

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,12 +2,7 @@
 	path = dx-runtime
 	url = git@github.com:DEEPX-AI/dx-runtime.git
 	ignore = dirty
-[submodule "dx-compiler"]
-	path = dx-compiler
-	url = git@github.com:DEEPX-AI/dx-compiler.git
+[submodule "dx-clip-demo"]
+	path = dx-clip-demo
+	url = git@github.com:DEEPX-AI/dx_clip_demo.git
 	ignore = dirty
-[submodule "dx-modelzoo"]
-	path = dx-modelzoo
-	url = git@github.com:DEEPX-AI/dx-modelzoo.git
-	ignore = dirty
-
