--- a/docker/docker-compose.internal.yml
+++ b/docker/docker-compose.internal.yml
@@ -1,15 +1,5 @@
 services:
-  dx-compiler:
-    build:
-      args:
-        USE_INTRANET: "true"
-        CA_FILE_NAME: "intranet_CA_SSL.crt"
-  dx-runtime:
-    build:
-      args:
-        USE_INTRANET: "true"
-        CA_FILE_NAME: "intranet_CA_SSL.crt"
-  dx-modelzoo:
+  dx-clip-demo:
     build:
       args:
         USE_INTRANET: "true"
