feat: Add --use-volume option for smaller Docker images
- This commit adds a --use-volume option to support a host-based development workflow.
- Using this option, the dx-clip-demo application setup is skipped during the Docker build. Instead, the container mounts a host volume. This results in a significantly smaller Docker image and allows for faster development cycles, as code changes made on the host are immediately reflected in the container without a rebuild

--- a/docker/Dockerfile.dx-clip-demo
+++ b/docker/Dockerfile.dx-clip-demo
@@ -143,14 +143,28 @@ RUN apt-get update && \
 WORKDIR /deepx/dx-clip-demo
 ARG FILE_DX_CLIP_DEMO=archives/dx-clip-demo.tar.gz
 ADD ${FILE_DX_CLIP_DEMO} /deepx/dx-clip-demo/
-# RUN set -x && \
-#     . /venv-dxnn/bin/activate && \
-#     echo "Build dx_clip_demo..." && \
-#     ./setup.sh --app_type=pyqt
+
+ARG USE_VOLUME=1
+RUN set -x && \
+    echo "USE_VOLUME: $USE_VOLUME" && \
+    if [ $USE_VOLUME -eq 1 ]; then \
+      echo "Skip to setup dx-clip-demo"; \
+    else \
+      echo "Setup dx-clip-demo ..." && \
+      ./setup.sh --app_type=pyqt; \
+    fi
+
 
 WORKDIR /deepx/dx-clip-demo
 
-RUN echo "source /venv-dxnn/bin/activate" >> /root/.bashrc
+RUN set -x && \
+    echo "USE_VOLUME: $USE_VOLUME" && \
+    if [ $USE_VOLUME -eq 1 ]; then \
+      echo "source /venv-dxnn/bin/activate" >> /root/.bashrc; \
+    else \
+      echo "source /deepx/dx-clip-demo/venv-pyqt/bin/activate" >> /root/.bashrc; \
+    fi
+
 
 ENV DX_CONTAINER_MODE=true
 
