--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: docker/Dockerfile.dx-clip-demo
       args:
         UBUNTU_VERSION: ${UBUNTU_VERSION}
+        USE_VOLUME: ${USE_VOLUME}
     ipc: host # NPU ipc
     pid: host # pid sharing for DX-RT Service
     tty: true # NPU
@@ -31,7 +32,7 @@ services:
       - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket # NPU dbus
       - /run/dbus:/run/dbus # NPU dbus
       - /var/lib/dbus:/var/lib/dbus # NPU dbus
-      - ${LOCAL_VOLUME_PATH:-../workspace}:${DOCKER_VOLUME_PATH:-/deepx/workspace} # mount volume
+#      - ${LOCAL_VOLUME_PATH:-../workspace}:${DOCKER_VOLUME_PATH:-/deepx/workspace} # mount volume
       - /var/run/docker.sock:/var/run/docker.sock # execute dx_com in dx-compiler container via docker CLI
     network_mode: "host"
     privileged: true # NPU
